--- a/client/src/CSS/scss_partials/home/menu/_breadcrumb.scss
+++ b/client/src/CSS/scss_partials/home/menu/_breadcrumb.scss
@@ -50,7 +50,7 @@
 	}
 
 	.breadcrumb-button__text--item-name {
-		color: v.$yellow-level-1;
+		color: v.$basic-yellow-level-1;
 	}
 
 	.breadcrumb-button__end-container {
