--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -53,12 +53,17 @@
 		left: 10px;
 		border: v.$navbar-hamburger-border-width solid black;
 		border-radius: v.$navbar-hamburger-border-radius;
-		background-color: white;
+		background-color: v.$mode-navbar-hamburger-dropdown-background-color-light;
 		font-family: Verdana, Geneva, sans-serif;
 		font-size: 14px;
 	}
 
 	.hamburger-dropdown__top-space {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		position: relative;
 		display: block;
 		height: 34px;
@@ -70,43 +75,50 @@
 		font-size: 24px;
 	}
 
-	.hamburger-dropdown__option { 
+	.hamburger-dropdown__option {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		position: relative;
 		display: block;
-		border-top: 1px solid gray;
+		border-top: 1px solid v.$mode-navbar-hamburger-dropdown-option-border-color-light;
 		padding-left: 12px;
-		height: v.$hamburger-dropdown-item-height;
-		line-height: v.$hamburger-dropdown-item-height;
+		height: v.$hamburger-dropdown-option-height;
+		line-height: v.$hamburger-dropdown-option-height;
 		white-space: nowrap;
 		overflow: hidden;
 		cursor: pointer;
 
 		&:hover,
 		&:active {
-			background-color: v.$gray-light-level-2;
+			background-color: v.$mode-navbar-hamburger-dropdown-option-hover-background-color-light;
 		}
 	}
 
 	.hamburger-dropdown__option--selected {
-		background-color: v.$gray-light-level-5;
+		background-color: v.$mode-navbar-hamburger-dropdown-option-selected-background-color-light;
 
 		&:hover,
 		&:active {
-			background-color: v.$gray-light-level-5;
+			background-color: v.$mode-navbar-hamburger-dropdown-option-selected-background-color-light;
 		}
 	}
 
 	.hamburger-dropdown__option--item-name {
-		color: blue;
+		color: v.$mode-navbar-hamburger-dropdown-option-name-text-color-light;
 	}
 
 	.hamburger-dropdown__option--last-button-round-bottom-border {
-		border-radius: 0 0 v.$navbar-hamburger-border-radius
-			v.$navbar-hamburger-border-radius;
+		// Found that subtracting 3px from $navbar-hamburger-border-radius
+		// ...gave best results
+		border-radius: 0 0 v.$navbar-hamburger-border-radius - 3
+			v.$navbar-hamburger-border-radius - 3;
 	}
 
 	.hamburger-dropdown__option__icon {
-		color: v.$gray-dark-level-1;
+		color: v.$mode-navbar-hamburger-dropdown-option-icon-text-color-light;
 	}
 
 	.hamburger-dropdown__option__svg-arrow-option-2 {
@@ -126,7 +138,7 @@
 		@include m.stop-text-selection();
 
 		padding: 1px 0px 0px 5px;
-		color: v.$gray-level-3;
+		color: v.$gray-level-4;
 		opacity: 0.6;
 		font-size: 17px;
 		cursor: pointer;
@@ -159,6 +171,6 @@
 	}
 
 	.hamburger-title--item-name {
-		color: v.$yellow-level-1;
+		color: v.$basic-yellow-level-1;
 	}
 }
