Added pointer cursor to navbar buttons and tweaked turkish theme colors

--- a/client/src/CSS/scss_partials/home/menu/_breadcrumb.scss
+++ b/client/src/CSS/scss_partials/home/menu/_breadcrumb.scss
@@ -16,6 +16,7 @@
 		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
 		height: v.$navbar-height;
+		cursor: pointer;
 	}
 
 	.breadcrumb-button--right {
