--- a/client/src/CSS/scss_partials/home/menu/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/_navbar.scss
@@ -42,6 +42,7 @@
 		vertical-align: middle;
 		// Allows vertical-align: middle to work
 		line-height: v.$navbar-account-button-height;
+		cursor: pointer;
 	}
 }
 
