--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -83,19 +83,26 @@ $imperial-blue-level-8: #165181;
 $imperial-blue-level-9: #154b77;
 $imperial-blue-level-10: #15466e;
 $imperial-blue-level-11: #123f63;
+// Old-Copper blues
+$old-copper-blue-level-1: #87b2bd;
+$old-copper-blue-level-2: #7aa2ac;
 // Queen blues
 $queen-blue-light-level-1: #4d6e92;
 $queen-blue-light-level-2: #4d6b8b;
 $queen-blue-dark-level-1: #45607e;
 $queen-blue-dark-level-2: #3d5774;
 // Turkish blues
-$turkish-blue-light-level-1: #8ba8b3;
-$turkish-blue-light-level-2: #6691a3;
-$turkish-blue-dark-level-1: #50798b;
+$turkish-blue-level-1: #74acc2;
+$turkish-blue-level-2: #6ca0b4;
+$turkish-blue-level-3: #6595a8;
+$turkish-blue-level-4: #537c8d;
+$turkish-blue-level-5: #50798b;
 // Turquoise blues
-$turquoise-blue-light-level-1: #2ba6c5;
-$turquoise-blue-light-level-2: #258faa;
-$turquoise-blue-light-level-3: #1f7a91;
+$turquoise-blue-light-level-1: #30bfe2;
+$turquoise-blue-light-level-2: #2eb3d4;
+$turquoise-blue-light-level-3: #2ba6c5;
+$turquoise-blue-light-level-4: #258faa;
+$turquoise-blue-light-level-5: #1f7a91;
 
 // Basic reds
 $basic-red-light-level-1: #ff3e3e;
@@ -282,19 +289,17 @@ $mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-ligh
 $mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-base-primary-text-color-dark;
 
 // Themes
-$theme-brighter-border-background-color-blue-turkish: $turkish-blue-light-level-2;
-$theme-base-border-background-color-blue-turkish: $turkish-blue-dark-level-1;
-$theme-text-color-blue-turkish: $turquoise-blue-light-level-1;
+$theme-brighter-border-background-color-blue-turkish: $turkish-blue-level-3;
+$theme-base-border-background-color-blue-turkish: $turkish-blue-level-4;
 $theme-brighter-border-background-color-blue-queen: $queen-blue-light-level-1;
 $theme-base-border-background-color-blue-queen: $queen-blue-dark-level-2;
-$theme-text-color-blue_dark: $bdazzled-blue-level-1;
 // Themes + Light/Dark mode
-$theme-mode-blue-turkish-text-color-light: $turquoise-blue-light-level-2;
+$theme-mode-blue-turkish-text-color-light: $turquoise-blue-light-level-4;
 $theme-mode-blue-turkish-text-color-dark: $turquoise-blue-light-level-1;
 $theme-mode-blue-queen-text-color-light: $bdazzled-blue-level-2;
 $theme-mode-blue-queen-text-color-dark: $bdazzled-blue-level-1;
-$theme-mode-blue-turkish-focus-border-color-light: $turquoise-blue-light-level-2;
-$theme-mode-blue-turkish-focus-border-color-dark: $turquoise-blue-light-level-3;
+$theme-mode-blue-turkish-focus-border-color-light: $turquoise-blue-light-level-4;
+$theme-mode-blue-turkish-focus-border-color-dark: $turquoise-blue-light-level-5;
 $theme-mode-blue-queen-focus-border-color-light: $egyptian-blue-level-2;
 $theme-mode-blue-queen-focus-border-color-dark: $egyptian-blue-level-4;
 
@@ -311,8 +316,8 @@ $filter-button-active-color-2: #ae00ff;
 $filter-button-active-color-3: #ffbb00;
 $filter-button-active-color: $filter-button-active-color-1;
 // Components
-$register-login-submit-button-border-background-color: $turkish-blue-light-level-1;
-$register-login-submit-button-hover-border-background-color: $turkish-blue-light-level-2;
+$register-login-submit-button-border-background-color: $old-copper-blue-level-1;
+$register-login-submit-button-hover-border-background-color: $old-copper-blue-level-2;
 $register-login-bottom-link-text-color: $basic-blue-level-1;
 $breadcrumb-hamburger-close-button-text-color: $basic-red-light-level-2;
 
